
=== Beats version HEAD
https://github.com/elastic/beats/compare/v5.6.16...5.6[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Bugfixes

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

- Prevent Winlogbeat from dropping events with invalid XML. {pull}11006{11006}

==== Added

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Deprecated

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Known Issue

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-5.6.16]]
=== Beats version 5.6.16
https://github.com/elastic/beats/compare/v5.6.15...v5.6.16[View commits]

*Winlogbeat*

- Prevent Winlogbeat from dropping events with invalid XML. {pull}11006[11006]

[[release-notes-5.6.15]]
=== Beats version 5.6.15
https://github.com/elastic/beats/compare/v5.6.14...v5.6.15[View commits]

No changes in this version.


[[release-notes-5.6.14]]
=== Beats version 5.6.14
https://github.com/elastic/beats/compare/v5.6.13...v5.6.14[View commits]

No changes in this version.

[[release-notes-5.6.13]]
=== Beats version 5.6.13
https://github.com/elastic/beats/compare/v5.6.12...v5.6.13[View commits]

No changes in this version.

[[release-notes-5.6.12]]
=== Beats version 5.6.12
https://github.com/elastic/beats/compare/v5.6.11...v5.6.12[View commits]

No changes in this version.

[[release-notes-5.6.11]]
=== Beats version 5.6.11
https://github.com/elastic/beats/compare/v5.6.10...v5.6.11[View commits]

No changes in this version.

[[release-notes-5.6.10]]
=== Beats version 5.6.10
https://github.com/elastic/beats/compare/v5.6.9...v5.6.10[View commits]

==== Bugfixes

*Packetbeat*
